err/pystacks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pystacks'...
Listing './lib/python3.5/site-packages/pystacks/dataset'...
Compiling './lib/python3.5/site-packages/pystacks/dataset/conll_langmodel.py'...
***   File "./lib/python3.5/site-packages/pystacks/dataset/conll_langmodel.py", line 42
    print 'loaded', len(train_sents), 'training', len(dev_sents), 'dev', len(test_sents), 'test sentences'
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pystacks/dataset/conll_pos.py'...
***   File "./lib/python3.5/site-packages/pystacks/dataset/conll_pos.py", line 36
    print 'loaded', len(train_sents), 'training', len(dev_sents), 'dev', len(test_sents), 'test sentences'
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pystacks/dataset/freebase_kbc.py'...
***   File "./lib/python3.5/site-packages/pystacks/dataset/freebase_kbc.py", line 72
    print 'loaded', len(train_data), 'training', len(dev_data), 'dev', len(test_data), 'test triplets', len(entity_vocab), 'word types', len(relation_vocab), 'relation types'
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pystacks/layers'...
Listing './lib/python3.5/site-packages/pystacks/utils'...
Listing './lib/python3.5/site-packages/pystacks-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
